fix pipelist wrapping

--- a/src/htdocs/css/_common.scss
+++ b/src/htdocs/css/_common.scss
@@ -6,9 +6,9 @@
   display: flex;
   flex-wrap: wrap;
 
-  > li + li:before {
+  li:not(:last-child):after {
     content: '|';
-    padding: 0 3px;
+    margin: 0 .25em;
   }
 
   .selected {
